package NKikimrColumnShardSubscriberProto;

message TAnalyzeSubscriber {
}

message TEvent {
    oneof Implementation {
        TAnalyzeSubscriber AnalyzeSubscriber = 21;
    }
}
